--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-transformer-sharp": "^1.6.5",
     "jspdf": "^1.3.5",
     "lodash": "^4.17.4",
+    "paper-css": "^0.4.1",
     "react-lazyload": "^2.2.7",
     "react-responsive-grid": "^0.3.4",
     "react-tap-event-plugin": "^2.0.1",
